# alpine_on_ios

./: .gitignore  AlpineOnIOS.entitlements  Makefile  README.md  project.yml
.github/workflows/: build.yml  ci.yml  release.yml  version-tag.yml
AlpineOnIOS/App/: AlpineOnIOSApp.swift  ContentView.swift  Info.plist
AlpineOnIOS/Bridge/: AlpineOnIOS-Bridging-Header.h  EmulatorBridge.swift
AlpineOnIOS/Display/: DisplayView.swift  InputMapper.swift
AlpineOnIOS/Settings/: AppSettings.swift  SettingsView.swift
AlpineOnIOS/Terminal/: ANSIColors.swift  TerminalBuffer.swift  TerminalParser.swift  TerminalView.swift
emu/: CMakeLists.txt  Makefile
emu/include/: cpu.h  decoder.h  elf_loader.h  emu.h  framebuffer.h  jit.h  log.h  memory.h  process.h  signal_emu.h  syscall.h  vfs.h  vfs_input.h
emu/src/: cpu.c  decoder.c  elf_loader.c  emu.c  exec_branch.c  exec_dp_imm.c  exec_dp_reg.c  exec_ldst.c  exec_simd.c  exec_system.c  jit.c  jit_entry.S  log.c  memory.c  process.c  signal_emu.c  sys_file.c  sys_memory.c  sys_misc.c  sys_net.c  sys_process.c  sys_signal.c  syscall.c  vfs.c  vfs_dev.c  vfs_fb.c  vfs_input.c  vfs_proc.c  vfs_real.c
emu/tests/: test_cpu.c  test_decoder.c  test_elf.c  test_interactive_fork.c  test_interp.c  test_interp.c.patch  test_main.c  test_memory.c  test_multi_fork.c  test_run.c  test_syscall.c
rootfs/: download_rootfs.sh
rootfs/overlay/etc/X11/: xorg.conf
rootfs/overlay/root/: .profile  .xinitrc  start-firefox.sh
scripts/: build_rootfs.sh  package_ipa.sh
